# doc-gen

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: .flake8  pyproject.toml
backend/config/: config.yaml
backend/muster/: Code Kommentare.md  DB Kompendium.md  Wiki Artikel.md
backend/src/: main.py
backend/src/dependencies/: config.py  database.py
backend/src/models/: ChatHistory.py  GitDeletedPath.py
backend/src/routers/: conversation.py  model.py  muster.py
backend/src/util/: auth.py
backend/tests/: test_main.py
frontend/: .eslintrc  .nycrc.json  .prettierrc.js  Dockerfile  angular.json  cypress.config.ts  karma.conf.js  package-lock.json  package.json  proxy.localhost.conf.json  renovate.json  tsconfig.app.json  tsconfig.json
frontend/cypress/: coverage.webpack.js  tsconfig.json
frontend/cypress/e2e/: chat-dialog.cy.ts  conversation-detail.cy.ts  conversations-list.cy.ts  muster-management.cy.ts
frontend/cypress/fixtures/: conversation-docs.json  conversation-files.json  conversation.json  conversations.json  models.json  muster.json  new-doc.json  upload-example.txt
frontend/cypress/support/: component.ts  e2e.ts
frontend/src/: index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
muster/: Fachlich Technische Dokumentation.md
src/dependencies/: config.py  logging_config.py
src/models/: Conversation.py  Documentation.py  File.py  FileNode.py  GitMovedPath.py  Muster.py  Repository.py
tests/: conftest.py  test_main.py
(+35 files in other folders)
